Add DI to remove luis API keys hard coded in source code.Moved to web.config

--- a/TechieBot/TechieBot.csproj
+++ b/TechieBot/TechieBot.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
     <Compile Include="Dialogs\RootLUISDialog.cs" />
+    <Compile Include="DIContainer\MainModule.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
