--- a/TechieBot/bin/Bot Application.dll.config
+++ b/TechieBot/bin/Bot Application.dll.config
@@ -9,6 +9,8 @@
     <add key="BotId" value="YourBotId" />
     <add key="MicrosoftAppId" value="" />
     <add key="MicrosoftAppPassword" value="" />
+    <add key="luis:ModelId" value="9b312b76-4ade-487b-aba0-83b911c52513"/>
+    <add key="luis:SubscriptionId" value="da360bcc0b3e40f89a1806211cd6799d"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
