--- a/TechieBot/TechieBot.csproj
+++ b/TechieBot/TechieBot.csproj
@@ -112,7 +112,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\MessagesController.cs" />
+    <Compile Include="bin\MessagesController.cs" />
+    <Compile Include="Dialogs\DiagnoseInternetConnectionDialog.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
     <Compile Include="Dialogs\RootLUISDialog.cs" />
     <Compile Include="DIContainer\MainModule.cs" />
@@ -131,6 +132,9 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
