--- a/TechieBot/bin/Bot Application.dll.config
+++ b/TechieBot/bin/Bot Application.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,19 +9,18 @@
     <add key="BotId" value="YourBotId" />
     <add key="MicrosoftAppId" value="" />
     <add key="MicrosoftAppPassword" value="" />
-    <add key="luis:ModelId" value="9b312b76-4ade-487b-aba0-83b911c52513"/>
-    <add key="luis:SubscriptionId" value="da360bcc0b3e40f89a1806211cd6799d"/>
+    <add key="luis:ModelId" value="9b312b76-4ade-487b-aba0-83b911c52513" />
+    <add key="luis:SubscriptionId" value="da360bcc0b3e40f89a1806211cd6799d" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
     The following attributes can be set on the <httpRuntime> tag.
       <system.Web>
         <httpRuntime targetFramework="4.6" />
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="Off" /> 
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
@@ -32,13 +31,14 @@
         <add value="default.htm" />
       </files>
     </defaultDocument>
-    
-  <handlers>
+
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
