Add Operating Systems to DiagnoseInternetConnection

--- a/TechieBot/TechieBot.csproj
+++ b/TechieBot/TechieBot.csproj
@@ -118,6 +118,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\DiagnoseInternetConnectionForm.cs" />
+    <Compile Include="Models\Enums\OperatingSystems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
