--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\MessageHelper.cs" />
     <Compile Include="Models\DiagnoseInternetConnectionForm.cs" />
     <Compile Include="Models\Enums\OperatingSystems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
