--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -132,8 +132,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\MessageHelper.cs" />
-    <Compile Include="Models\DiagnoseInternetConnectionForm.cs" />
+    <Compile Include="Dialogs\Forms\DiagnoseInternetConnectionForm.cs" />
     <Compile Include="Models\Enums\OperatingSystems.cs" />
+    <Compile Include="Models\Dtos\JokeDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IJokeService.cs" />
     <Compile Include="Services\JokeService.cs" />
