Update showcase to make buddy evil

--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <Content Include="default.htm" />
     <Content Include="Global.asax" />
+    <Content Include="Images\freedom.gif" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
