Very basic version of getWeather working

--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -127,6 +127,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Contracts\IWeatherService.cs" />
+    <Compile Include="Models\Dtos\WeatherDto.cs" />
     <Compile Include="Services\WeatherService.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Dialogs\ConfirmRobotDialog.cs" />
