WIP, Refactoring WeatherServiceDialog

--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -127,7 +127,8 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Contracts\IWeatherService.cs" />
-    <Compile Include="Dialogs\GetForecastDialog.cs" />
+    <Compile Include="Dialogs\GetWeatherForecastDialog.cs" />
+    <Compile Include="Models\City.cs" />
     <Compile Include="Models\Dtos\WeatherDto.cs" />
     <Compile Include="Services\WeatherService.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
