--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Dialogs\GetWeatherForecastDialog.cs" />
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Dtos\WeatherDto.cs" />
+    <Compile Include="Models\ConversationPauseConstants.cs" />
     <Compile Include="Services\LanguageService.cs" />
     <Compile Include="Services\WeatherService.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
