--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -138,7 +138,7 @@
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Dtos\WeatherDto.cs" />
     <Compile Include="Models\ConversationPauseConstants.cs" />
-    <Compile Include="Modules\DialogsModule.cs" />
+    <Compile Include="Modules\ApplicationModule.cs" />
     <Compile Include="Services\ConversationService.cs" />
     <Compile Include="Services\WeatherService.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
