--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -129,8 +129,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Contracts\IConversationService.cs" />
-    <Compile Include="Contracts\IWeatherService.cs" />
+    <Compile Include="Services\Contracts\IConversationService.cs" />
+    <Compile Include="Services\Contracts\IWeatherService.cs" />
     <Compile Include="Dialogs\Builders\DialogBuilder.cs" />
     <Compile Include="Dialogs\GetWeatherForecastDialog.cs" />
     <Compile Include="Dialogs\Builders\IDialogBuilder.cs" />
@@ -143,7 +143,7 @@
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Dialogs\ConfirmRobotDialog.cs" />
     <Compile Include="Services\HeadTailsService.cs" />
-    <Compile Include="Contracts\IHeadTailsService.cs" />
+    <Compile Include="Services\Contracts\IHeadTailsService.cs" />
     <Compile Include="Dialogs\RandomNumberDialog.cs" />
     <Compile Include="Dialogs\RootLuisDialog.cs" />
     <Compile Include="Global.asax.cs">
@@ -153,7 +153,7 @@
     <Compile Include="Models\Enums\OperatingSystems.cs" />
     <Compile Include="Models\Dtos\JokeDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Contracts\IJokeService.cs" />
+    <Compile Include="Services\Contracts\IJokeService.cs" />
     <Compile Include="Services\JokeService.cs" />
   </ItemGroup>
   <ItemGroup>
