WIP, start to pull out temperture

--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -130,6 +130,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Dialogs\Builders\RichCardAttachmentBuilder.cs" />
     <Compile Include="Helpers\GlobalizationHelpers.cs" />
+    <Compile Include="Models\Dtos\MainWeatherDto.cs" />
     <Compile Include="Models\Enums\TextCaseType.cs" />
     <Compile Include="Services\Contracts\IConversationService.cs" />
     <Compile Include="Services\Contracts\IWeatherService.cs" />
