--- a/BuddyBot.Repository/appsettings.json
+++ b/BuddyBot.Repository/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BuddyBotDb;Integrated Security=True;"
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BuddyBotDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
