--- a/BuddyBot/packages.config
+++ b/BuddyBot/packages.config
@@ -8,6 +8,8 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net46" />
   <package id="Microsoft.Bot.Builder" version="3.15.0" targetFramework="net46" />
+  <package id="Microsoft.Bot.Builder.PersonalityChat" version="3.0.0-alpha-m1.0" targetFramework="net46" />
+  <package id="Microsoft.Bot.Builder.PersonalityChat.Core" version="1.0.0-alpha-m1.0" targetFramework="net46" />
   <package id="Microsoft.Bot.Connector" version="3.15.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Logging" version="5.2.2" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net46" />
