--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -233,7 +233,7 @@
     <Compile Include="Models\Dtos\WeatherTemperatureDto.cs" />
     <Compile Include="Models\Enums\Temperature.cs" />
     <Compile Include="Models\Enums\TextCaseType.cs" />
-    <Compile Include="Dialogs\PersonalityChatialog.cs" />
+    <Compile Include="Dialogs\PersonalityChatDialog.cs" />
     <Compile Include="Services\Contracts\IConversationService.cs" />
     <Compile Include="Services\Contracts\IWeatherService.cs" />
     <Compile Include="Dialogs\Builders\DialogBuilder.cs" />
