--- a/BuddyBot/packages.config
+++ b/BuddyBot/packages.config
@@ -3,14 +3,22 @@
   <package id="Autofac" version="4.8.0" targetFramework="net461" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net461" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
-  <package id="Microsoft.Bot.Builder" version="3.15.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.DocumentDB" version="1.22.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Bot.Builder" version="3.15.2.2" targetFramework="net461" />
+  <package id="Microsoft.Bot.Builder.Azure" version="3.15.2.2" targetFramework="net461" />
+  <package id="Microsoft.Bot.Builder.History" version="3.15.2.2" targetFramework="net461" />
   <package id="Microsoft.Bot.Builder.PersonalityChat" version="3.0.0-alpha-m1.0" targetFramework="net461" />
   <package id="Microsoft.Bot.Builder.PersonalityChat.Core" version="1.0.0-alpha-m1.0" targetFramework="net461" />
-  <package id="Microsoft.Bot.Connector" version="3.15.0" targetFramework="net461" />
+  <package id="Microsoft.Bot.Connector" version="3.15.2.2" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.1.1" targetFramework="net461" />
@@ -51,4 +59,6 @@
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="7.2.1" targetFramework="net461" />
 </packages>
