--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -263,10 +263,17 @@
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Helpers\GlobalizationHelpers.cs" />
     <Compile Include="Helpers\WeatherHelpers.cs" />
+    <Compile Include="Models\DataStore.cs" />
+    <Compile Include="Models\DataStoreEntryAttribute.cs" />
+    <Compile Include="Models\DataStoreKey.cs" />
     <Compile Include="Models\Dtos\WeatherTemperatureDto.cs" />
+    <Compile Include="Models\EnumExtensions.cs" />
     <Compile Include="Models\Enums\Temperature.cs" />
     <Compile Include="Models\Enums\TextCaseType.cs" />
     <Compile Include="Dialogs\PersonalityChatDialog.cs" />
+    <Compile Include="Services\BotDataExtensions.cs" />
+    <Compile Include="Services\BotDataService.cs" />
+    <Compile Include="Services\Contracts\IBotDataService.cs" />
     <Compile Include="Services\Contracts\IConversationService.cs" />
     <Compile Include="Services\Contracts\IWeatherService.cs" />
     <Compile Include="Dialogs\Builders\DialogBuilder.cs" />
