Add BotPersonaDialog functionality & DI wire-up

--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -259,6 +259,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Dialogs\BotPersonaDialog.cs" />
     <Compile Include="Dialogs\Builders\RichCardAttachmentBuilder.cs" />
     <Compile Include="Dialogs\NameDialog.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
