--- a/BuddyBot/packages.config
+++ b/BuddyBot/packages.config
@@ -49,6 +49,9 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
+  <package id="Serilog" version="2.7.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.AzureTableStorage" version="4.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
