--- a/BuddyBot/packages.config
+++ b/BuddyBot/packages.config
@@ -55,6 +55,7 @@
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.5.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.2.2" targetFramework="net461" />
@@ -62,6 +63,9 @@
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="7.2.1" targetFramework="net461" />
 </packages>
