--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -333,7 +333,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="city.list.json" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\PublishProfiles\buddy-bot - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\BuddyBot - Web Deploy.pubxml" />
     <Content Include="Scenario_Responses_Friendly.tsv" />
