Add get started dialog and wire up DI

--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -286,6 +286,7 @@
     <Compile Include="Dialogs\BotPersonaDialog.cs" />
     <Compile Include="Dialogs\Builders\RichCardAttachmentBuilder.cs" />
     <Compile Include="Dialogs\DeleteUserDataDialog.cs" />
+    <Compile Include="Dialogs\GetStartedDialog.cs" />
     <Compile Include="Dialogs\NameDialog.cs" />
     <Compile Include="Dialogs\PreferredWeatherLocationDialog.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
