Add personality hard options

--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -288,6 +288,7 @@
     <Compile Include="Dialogs\DeleteUserDataDialog.cs" />
     <Compile Include="Dialogs\GetStartedDialog.cs" />
     <Compile Include="Dialogs\NameDialog.cs" />
+    <Compile Include="Models\PersonalityChoiceHeroCard.cs" />
     <Compile Include="Dialogs\PreferredWeatherLocationDialog.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Helpers\GlobalizationHelpers.cs" />
