--- a/BuddyBot.Repository.Startup/BuddyBot.Repository.Startup.csproj
+++ b/BuddyBot.Repository.Startup/BuddyBot.Repository.Startup.csproj
@@ -6,6 +6,14 @@
     <StartupObject></StartupObject>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="city.list.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="city.list.json" />
+  </ItemGroup>
+
     <ItemGroup>
     <ProjectReference Include="..\BuddyBot.Repository\BuddyBot.Repository.csproj" />
   </ItemGroup>
