--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -335,7 +335,7 @@
     <Compile Include="Settings\IAzureStorageSettings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="city.list.json" />
+    <None Include="city.list.json" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
